--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,11 @@ body{
 .grow { transition: all .2s ease-in-out !important; }
 .grow:hover { transform: scale(1.2) !important; }
 
-.myClassName {
-
-    
-
-}
+/* .vertical-menu {
+  width: 100%;
+  height: 500px;
+  overflow-y: auto;
+} */
 
 
 
