--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,11 @@
   font-family: 'silkscreen';
   src: url('../fonts/slkscr.ttf') format('truetype');;
 }
-@font-face {
-  font-family: 'codeFont';
-  src: url('../fonts/SourceCodePro-Light.ttf');
-}
 
 :root{
   --main-bg-color-dark: #293c43;
   --main-bg-color-light:#749592;
-  --panel-bg-color: #,0
-  
-  ;
+  --panel-bg-color: #749592;
   --widget-bg-color: #525162;
   --widget-over-color: #353542;
   --input-bg-color: #446668;
